[gd_scene load_steps=43 format=2]

[ext_resource path="res://recursos/graficos/rana/parado.png" type="Texture" id=1]
[ext_resource path="res://recursos/graficos/rana/corriendo.png" type="Texture" id=2]
[ext_resource path="res://recursos/graficos/subsuelo.png" type="Texture" id=3]
[ext_resource path="res://recursos/graficos/rana/saltando.png" type="Texture" id=4]
[ext_resource path="res://scripts/jugador.gd" type="Script" id=5]
[ext_resource path="res://recursos/graficos/fondo.png" type="Texture" id=6]
[ext_resource path="res://scripts/camara.gd" type="Script" id=7]
[ext_resource path="res://recursos/graficos/telon.png" type="Texture" id=8]
[ext_resource path="res://scripts/telon.gd" type="Script" id=9]
[ext_resource path="res://scripts/nivel_base.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "parado",
"speed": 20.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "saltando",
"speed": 20.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "corriendo",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 6, 1 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 5, 61 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 3.5, 96 )

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 434, 96 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "abrir"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 96 ), Vector2( 434, 96 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "cerrar"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 434, 96 ), Vector2( 80, 96 ) ]
}

[node name="NivelBase" type="Node2D"]
script = ExtResource( 10 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 80, 96 )
scale = Vector2( 0.5, 0.5 )
z_index = -5
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Subsuelo" type="StaticBody2D" parent="."]
position = Vector2( 0, 180 )
z_index = -4
collision_layer = 4
collision_mask = 3
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Subsuelo"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 160, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Subsuelo"]
position = Vector2( 80, 6 )
shape = SubResource( 1 )

[node name="Jugador" type="KinematicBody2D" parent="."]
position = Vector2( 9, 112 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
collision_mask = 14
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Jugador"]
frames = SubResource( 25 )
animation = "parado"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jugador"]
position = Vector2( 0, 15 )
shape = SubResource( 26 )

[node name="CuerpoJugador" type="Area2D" parent="Jugador"]
position = Vector2( -18, -218 )
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jugador/CuerpoJugador"]
position = Vector2( 9, 111 )
shape = SubResource( 27 )

[node name="Timer" type="Timer" parent="Jugador"]

[node name="Camara" type="Camera2D" parent="."]
position = Vector2( 80, 96 )
current = true
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="Camara"]

[node name="Frecuencia" type="Timer" parent="Camara"]

[node name="Duracion" type="Timer" parent="Camara"]
one_shot = true

[node name="Meta" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meta"]
position = Vector2( 155, 61 )
shape = SubResource( 28 )

[node name="Bordes" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes"]
position = Vector2( -3.5, 96 )
shape = SubResource( 29 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bordes"]
position = Vector2( 163, 97 )
shape = SubResource( 29 )

[node name="Telon" type="Sprite" parent="."]
visible = false
position = Vector2( 80, 96 )
scale = Vector2( 0.247442, 0.247442 )
z_index = 5
texture = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Telon"]
reset_on_save = false
anims/RESET = SubResource( 30 )
anims/abrir = SubResource( 31 )
anims/cerrar = SubResource( 32 )

[connection signal="area_entered" from="Jugador/CuerpoJugador" to="Jugador" method="_on_CuerpoJugador_area_entered"]
[connection signal="body_entered" from="Jugador/CuerpoJugador" to="Jugador" method="_on_CuerpoJugador_body_entered"]
[connection signal="body_exited" from="Jugador/CuerpoJugador" to="Jugador" method="_on_CuerpoJugador_body_exited"]
[connection signal="timeout" from="Camara/Frecuencia" to="Camara" method="_on_Frecuencia_timeout"]
[connection signal="timeout" from="Camara/Duracion" to="Camara" method="_on_Duracion_timeout"]
[connection signal="area_entered" from="Meta" to="." method="_on_Meta_area_entered"]
[connection signal="telon_cerrado" from="Telon" to="." method="_on_Telon_telon_cerrado"]
[connection signal="animation_finished" from="Telon/AnimationPlayer" to="Telon" method="_on_AnimationPlayer_animation_finished"]
